cmake_minimum_required(VERSION 3.23)
project(algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(algorithm "1476번 날짜계산 브루트포스 S5/main.cpp"
        "1476번 날짜계산 브루트포스 S5/main.cpp"
        "9095번 1, 2, 3 더하기 브루트포스 S3/main.cpp"
        "15652번 N과M(4) 백트래킹(재귀) S3/main.cpp"
        "15654번 N과M(5) S3/main.cpp" "14501번 퇴사 (재귀) S3/main.cpp"
        "2529번 부등호 (재귀) S1 /main.cpp" "1759번 암호 만들기 (재귀) G5/main.cpp"
        "10973번 이전 순열 규칙찾기 S3_3/main.cpp" "2193번 이친수 다이나믹 S3/main.cpp"
        "1912번 연속합 DP S2/main.cpp" "11724번 연결 요소의 개수 그래프 S2/main.cpp"
        "16929번 Two Dots DFS G5/main.cpp" "16947번 서울 지하철 2호선 DFS G3_3/main.cpp"
        "1620번 나는야 포켓몬 마스터 이다솜/main.cpp")
